[package]
name = "dwallet-mpc-types"
edition = "2024"
version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
schemars.workspace = true
twopc_mpc.workspace = true
class_groups.workspace = true
group.workspace = true
enum_dispatch.workspace = true
strum_macros.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
bcs.workspace = true
crypto-bigint.workspace = true
k256 = { version = "0.14.0-pre.11", default-features = false }
p256 = { version = "0.14.0-pre.11", default-features = false }
curve25519-dalek = { version = "5.0.0-pre.1", features = ["rand_core"] }

[lints]
workspace = true

[patch.crates-io]
crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "8aabcee5" }